tests/ui/solver-attribute/unknown/expected
error: Unknown solver `foo`
test.rs:5:1
  |
5 | #[kani::solver(foo)]
  | ^^^^^^^^^^^^^^^^^^^^
error: aborting due to previous error
